@@ -1,6 +1,7 @@
 <?php
 
 /**
+ * @deprecated 
  * Misc functions for transforming data into valid html jquery ui code
  * 
  * @author   Francois Lajoie
