@@ -1,5 +1,7 @@
 #VESRION 0.8.1#
 
+ - deprecated views/functions/ folder and files, moved general.php functions to new view helper html.php
+
  - added method getExtension() to Peak_Spl_FileInfo
 
  - added class Peak_Spl_Dirinfo
